// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`configureSessionEnv > ddev-tracked: a repo with its own config gets only the overrides, unchanged 1`] = `
"=== .ddev/config.yaml ===
name: demo
additional_hostnames: [alpha]

=== .ddev/config.zzz-knecht.yaml ===
#ddev-silent-no-warn
name: knecht-run-7
web_environment:
  - PRIMARY_SITE_URL=http://7.preview.knecht.test
  - X=1
  - KNECHT_PREVIEW_URL=http://7.preview.knecht.test
  - KNECHT_URL_ALPHA=http://alpha--7.preview.knecht.test
  - DDEV_PRIMARY_URL=http://7.preview.knecht.test
  - DDEV_PRIMARY_URL_WITHOUT_PORT=http://7.preview.knecht.test
  - DDEV_PRIMARY_URL_PORT=80
  - DDEV_SCHEME=http
  - DDEV_HOSTNAME=7.preview.knecht.test,alpha--7.preview.knecht.test
  - pnpm_config_store_dir=/mnt/ddev-global-cache/pnpm-store
  - YARN_CACHE_FOLDER=/mnt/ddev-global-cache/yarn
  - YARN_GLOBAL_FOLDER=/mnt/ddev-global-cache/yarn-berry
  - BUN_INSTALL_CACHE_DIR=/mnt/ddev-global-cache/bun

=== .ddev/docker-compose.zzz-knecht.yaml ===
#ddev-silent-no-warn
services:
  web:
    mem_limit: 2g
    pids_limit: 2048
    networks:
      knecht-ingress: {}
  db:
    mem_limit: 1g
networks:
  knecht-ingress:
    external: true

=== .ddev/mysql/00-knecht-lowmem.cnf ===
#ddev-silent-no-warn
[mysqld]
innodb-buffer-pool-size = 256M
performance_schema = OFF
max-connections = 30
tmp-table-size = 16M
max-heap-table-size = 16M
key-buffer-size = 8M
"
`;

exports[`configureSessionEnv > generated-plain: a repo without anything gets a headless php project with defaults 1`] = `
"=== .ddev/config.yaml ===
#knecht-generated
name: knecht-run-42
type: php
docroot: ""
webserver_type: generic
php_version: "8.4"
nodejs_version: "22"
omit_containers:
  - db
corepack_enable: true
disable_settings_management: true

=== .ddev/config.zzz-knecht.yaml ===
#ddev-silent-no-warn
name: knecht-run-42
web_environment:
  - pnpm_config_store_dir=/mnt/ddev-global-cache/pnpm-store
  - YARN_CACHE_FOLDER=/mnt/ddev-global-cache/yarn
  - YARN_GLOBAL_FOLDER=/mnt/ddev-global-cache/yarn-berry
  - BUN_INSTALL_CACHE_DIR=/mnt/ddev-global-cache/bun

=== .ddev/docker-compose.zzz-knecht.yaml ===
#ddev-silent-no-warn
services:
  web:
    mem_limit: 2g
    pids_limit: 2048
    networks:
      knecht-ingress: {}
networks:
  knecht-ingress:
    external: true
"
`;

exports[`configureSessionEnv > generated-with-bun: the repo's bun goes into the web image at the pinned version 1`] = `
"=== .ddev/config.yaml ===
#knecht-generated
name: knecht-run-42
type: php
docroot: ""
webserver_type: generic
php_version: "8.4"
nodejs_version: "22"
omit_containers:
  - db
corepack_enable: true
disable_settings_management: true

=== .ddev/config.zzz-knecht.yaml ===
#ddev-silent-no-warn
name: knecht-run-42
web_environment:
  - pnpm_config_store_dir=/mnt/ddev-global-cache/pnpm-store
  - YARN_CACHE_FOLDER=/mnt/ddev-global-cache/yarn
  - YARN_GLOBAL_FOLDER=/mnt/ddev-global-cache/yarn-berry
  - BUN_INSTALL_CACHE_DIR=/mnt/ddev-global-cache/bun

=== .ddev/docker-compose.zzz-knecht.yaml ===
#ddev-silent-no-warn
services:
  web:
    mem_limit: 2g
    pids_limit: 2048
    networks:
      knecht-ingress: {}
networks:
  knecht-ingress:
    external: true

=== .ddev/web-build/Dockerfile.knecht ===
RUN npm install -g bun@1.2.3
"
`;

exports[`configureSessionEnv > generated-with-devserver: the daemon and the preview env 1`] = `
"=== .ddev/config.yaml ===
#knecht-generated
name: knecht-run-42
type: php
docroot: ""
webserver_type: generic
php_version: "8.4"
nodejs_version: "22"
omit_containers:
  - db
corepack_enable: true
disable_settings_management: true

=== .ddev/config.zzz-knecht.yaml ===
#ddev-silent-no-warn
name: knecht-run-42
web_extra_daemons:
  - name: dev
    command: bash -lc 'npm run dev'
    directory: /var/www/html
  - name: forward
    command: knecht-forward 41000 3000
    directory: /var/www/html
web_environment:
  - KNECHT_PREVIEW_URL=http://42.preview.knecht.test
  - DDEV_PRIMARY_URL=http://42.preview.knecht.test
  - DDEV_PRIMARY_URL_WITHOUT_PORT=http://42.preview.knecht.test
  - DDEV_PRIMARY_URL_PORT=80
  - DDEV_SCHEME=http
  - DDEV_HOSTNAME=42.preview.knecht.test
  - pnpm_config_store_dir=/mnt/ddev-global-cache/pnpm-store
  - YARN_CACHE_FOLDER=/mnt/ddev-global-cache/yarn
  - YARN_GLOBAL_FOLDER=/mnt/ddev-global-cache/yarn-berry
  - BUN_INSTALL_CACHE_DIR=/mnt/ddev-global-cache/bun
  - __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS=42.preview.knecht.test

=== .ddev/docker-compose.zzz-knecht.yaml ===
#ddev-silent-no-warn
services:
  web:
    mem_limit: 2g
    pids_limit: 2048
    networks:
      knecht-ingress: {}
networks:
  knecht-ingress:
    external: true
"
`;

exports[`configureSessionEnv > generated-with-versions: detected versions and an override land in config.yaml 1`] = `
"=== .ddev/config.yaml ===
#knecht-generated
name: knecht-run-42
type: php
docroot: ""
webserver_type: generic
php_version: "8.2"
nodejs_version: "20"
omit_containers:
  - db
corepack_enable: true
disable_settings_management: true

=== .ddev/config.zzz-knecht.yaml ===
#ddev-silent-no-warn
name: knecht-run-42
web_environment:
  - APP_ENV=dev
  - pnpm_config_store_dir=/mnt/ddev-global-cache/pnpm-store
  - YARN_CACHE_FOLDER=/mnt/ddev-global-cache/yarn
  - YARN_GLOBAL_FOLDER=/mnt/ddev-global-cache/yarn-berry
  - BUN_INSTALL_CACHE_DIR=/mnt/ddev-global-cache/bun

=== .ddev/docker-compose.zzz-knecht.yaml ===
#ddev-silent-no-warn
services:
  web:
    mem_limit: 2g
    pids_limit: 2048
    networks:
      knecht-ingress: {}
networks:
  knecht-ingress:
    external: true
"
`;
